# llvm-crossbuild-example

./: .gitignore  .gn  .ninja_log  BUILD.gn  Notex.tst  README.md  build.ninja  build.ninja.orig  main.c
.github/workflows/: build.yaml
